package com.mettyoung.domain;

import lombok.Value;

@Value
public class ParkingLot {
    String name;
}
