package com.mettyoung.domain;

import lombok.Value;

@Value
public class Vehicle {
    VehicleType vehicleType;
    String plateNumber;
}
