package com.mettyoung.domain;

import lombok.Value;

@Value
public class VehicleLots {
    VehicleType vehicleType;
    Integer numberOfLots;
}
